--- a/src/styles/components/hyperlink-default.scss
+++ b/src/styles/components/hyperlink-default.scss
@@ -32,5 +32,9 @@
     }
     &__link-text {
         pointer-events: all;
+        max-width: 400px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 }
